Fixing table data overflow for small screen

--- a/app/assets/stylesheets/local/layout.scss
+++ b/app/assets/stylesheets/local/layout.scss
@@ -18,3 +18,6 @@ div.govuk-footer__navigation {
             flex-shrink: 1; // Support: Flexbox
   }
 }
+.govuk-grid-column-full.table_data {
+  overflow: auto;
+}
